fix: overflow splash screen, form e style

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,28 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
+@layer base {
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-slate-500 duration-200 hover:bg-slate-600 rounded-md;
+  }
+
   body,
   html {
     @apply bg-slate-900 text-gray-200;
   }
+}
 
+@layer components {
   .container {
     @apply max-w-6xl mx-auto p-4;
   }
 
   input,
   textarea {
-    @apply px-4 py-2 rounded-md bg-slate-900 outline-none w-full border border-slate-700;
+    @apply px-4 py-2 rounded-md bg-slate-900 outline-none w-full border border-slate-700 focus:outline-blue-500;
   }
 
   .btn {
     @apply px-4 py-2 rounded-md font-semibold text-sm duration-200 disabled:opacity-50 disabled:cursor-not-allowed;
   }
   .btn.btn-primary {
-    @apply bg-blue-500 hover:bg-blue-400 text-white disabled:hover:bg-blue-500;
+    @apply bg-blue-500 hover:bg-blue-400 text-gray-200 disabled:hover:bg-blue-500;
+  }
+  .btn.btn-success {
+    @apply bg-green-500 hover:bg-green-400 text-gray-200 disabled:hover:bg-green-500;
   }
   .btn.btn-outline {
-    @apply border border-slate-400 hover:opacity-80;
+    @apply border border-slate-400 hover:border-slate-300;
   }
 }
